# vifaras

./: .env.example  .gitignore  BARTER_DESIGN.md  DESIGN_QUESTIONS.md  IDEAS_BACKLOG.md  MANDATE_UX_FLOW.md  PROGRESS.md  PROJECT_BRIEF.md  SPEC_V0.md  TRADE_WINDOW_FLOW.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
backend/app/: main.py
backend/app/agents/: orchestrator.py  tool_layer.py
backend/app/api/: _dev_endpoints.py  _test_endpoints.py  agents.py  auth.py  capital_mandates.py  deals.py  health.py  identity.py  intents.py  legal.py  mandates.py  market.py  matches.py  negotiations.py  notifications.py  step_up.py
backend/app/core/: canonicalization.py  categories.py  config.py  datetime_helpers.py  db.py  error_handlers.py  launch_config.py  logging.py  metrics.py  platform_limits.py  rate_limit.py  rate_limiter.py  security.py  telemetry.py
backend/app/models/: schema.py  views.py
backend/app/services/: agent_scheduler.py  agent_state_service.py  anthropic_pricing.py  (+28 more)
backend/migrations/: env.py
backend/tests/: conftest.py  factories.py  test_abuse_detection_logging.py  test_agent_state.py  test_agents_mine.py  test_auth.py  test_capital_mandate.py  test_content_moderation.py  test_content_moderation_integration.py  test_cost_metrics.py  test_deal.py  test_dev_ai_status.py  test_embedding.py  test_health_probes.py  test_identity.py  test_intent_draft.py  test_intents.py  test_jwt_rotation.py  test_kms.py  test_launch_config.py  test_legal.py  test_mandate_verifier.py  test_mandates.py  test_market.py  test_match.py  test_metrics.py  test_mini_auction.py  test_negotiation.py  test_notification.py  test_orchestrator.py  test_pre_frontend.py  test_rate_limit_deep.py  test_refresh_token_rotation.py  test_revocation.py  test_scheduler.py  test_step_up.py  test_telemetry.py  test_telemetry_logging.py  test_tier_gating.py  test_tool_layer.py  (+1 more)
docs/: JWT_ROTATION_PROCEDURE.md  PRIVACY_POLICY.md  PRODUCTION_ENV_CHECKLIST.md
scripts/: check_launch_config.py  cleanup_legacy_kms_keys.py  seed_dev.py  simulate_agent_negotiation.py  smoke_agent_runtime.py  smoke_anthropic.py  smoke_anthropic_matching.py
(+22 files in other folders)
