[project]
name = "marketplace"
version = "0.0.1"
description = "Agent Marketplace V0 — autonomous AI agents negotiating with ZK identity"
readme = "PROJECT_BRIEF.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Teodoro Domenico", email = "teodorodomenico96@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "anthropic>=0.40",
  "openai>=1.40",
  "pgvector>=0.3",
  "alembic>=1.13",
  "webauthn>=2.1",
  "structlog>=24.1",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "pyjwt>=2.8",
  "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped event loop so the async engine's connection pool isn't
# bound to short-lived per-test loops (asyncpg connections terminate-on-loop-close
# otherwise leaks "Event loop is closed" errors at fixture teardown).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
addopts = "-ra -q"
pythonpath = ["backend"]
markers = [
  "db: test that touches the database (auto-managed Postgres+pgvector container; skip with `-m 'not db'`)",
]
filterwarnings = [
  # §5 scaffold uses datetime.utcnow() (deprecated 3.12+) and the legacy
  # SQLAlchemy 1.x .query() API. Founder confirmed scaffold stays as-is —
  # silence those warnings so they don't drown real signal in test output.
  "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
  "ignore:.*Query.* is being used as a legacy interface.*:Warning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]
